[gd_scene load_steps=3 format=3 uid="uid://ddxu2u02bpcnq"]

[ext_resource type="Script" path="res://Game.gd" id="1_0g810"]
[ext_resource type="PackedScene" uid="uid://bbd2h08jqc4r" path="res://GameOverMessage.tscn" id="2_hj0ay"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0g810")

[node name="Board" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 96.0
offset_bottom = 96.0
scale = Vector2(3, 3)

[node name="Row0" type="HBoxContainer" parent="Board"]
layout_mode = 2

[node name="Button0" type="TextureButton" parent="Board/Row0"]
layout_mode = 2

[node name="Button1" type="TextureButton" parent="Board/Row0"]
layout_mode = 2

[node name="Button2" type="TextureButton" parent="Board/Row0"]
layout_mode = 2

[node name="Row1" type="HBoxContainer" parent="Board"]
layout_mode = 2

[node name="Button0" type="TextureButton" parent="Board/Row1"]
layout_mode = 2

[node name="Button1" type="TextureButton" parent="Board/Row1"]
layout_mode = 2

[node name="Button2" type="TextureButton" parent="Board/Row1"]
layout_mode = 2

[node name="Row2" type="HBoxContainer" parent="Board"]
layout_mode = 2

[node name="Button0" type="TextureButton" parent="Board/Row2"]
layout_mode = 2

[node name="Button1" type="TextureButton" parent="Board/Row2"]
layout_mode = 2

[node name="Button2" type="TextureButton" parent="Board/Row2"]
layout_mode = 2

[node name="GameOverMessage" parent="." instance=ExtResource("2_hj0ay")]
layout_mode = 1
offset_left = 8.0
offset_right = 8.0

[connection signal="button_up" from="Board/Row0/Button0" to="." method="_on_button_0_button_up"]
[connection signal="button_up" from="Board/Row0/Button1" to="." method="_on_button_1_button_up"]
[connection signal="button_up" from="Board/Row0/Button2" to="." method="_on_button_2_button_up"]
[connection signal="button_up" from="Board/Row1/Button0" to="." method="_on_button_3_button_up"]
[connection signal="button_up" from="Board/Row1/Button1" to="." method="_on_button_4_button_up"]
[connection signal="button_up" from="Board/Row1/Button2" to="." method="_on_button_5_button_up"]
[connection signal="button_up" from="Board/Row2/Button0" to="." method="_on_button_6_button_up"]
[connection signal="button_up" from="Board/Row2/Button1" to="." method="_on_button_7_button_up"]
[connection signal="button_up" from="Board/Row2/Button2" to="." method="_on_button_8_button_up"]
[connection signal="button_up" from="GameOverMessage/Container/Button" to="." method="_on_button_button_up"]

[editable path="GameOverMessage"]
